[package]
name = "test-native-pgrtest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.11.1"
num_enum = "0.5.4"
borsh = "0.9"
thiserror = "1.0.24"
num-traits = "0.2.14"
num-derive = "0.3.3"
enumflags2 = "0.7.1"
spl-token = {version="3.3.0", features= ["no-entrypoint"]}
bonfida-utils = "0.2.12"
spl-associated-token-account = {version = "1.0.5"}
bytemuck = "1.9.1"
test-native-pgrtest-inner = {path = "../inner_pgr/program/", features = ["no-entrypoint"]} 

[dev-dependencies]
hexdump = "0.1.0"
solana-sdk = "1.11.1"
rand = "0.8.4"
arrayref = "0.3.6"
solana-program-test = "1.11.1"
tokio = {version="1.0", features = ["macros"]}

# [patch.crates-io]
# solana-program = {path = "../../solana/sdk/program/"}
# solana-program-test =  {path = "../../solana/program-test"}
# solana-sdk = {path = "../../solana/sdk/"}

[lib]
crate-type = ["cdylib", "lib"]
